--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "framer-motion": "^12.14.0",
     "mobx": "^6.13.7",
     "mobx-react-lite": "^4.1.0",
     "prop-types": "^15.8.1",
@@ -22,19 +23,16 @@
     "sass": "^1.89.0"
   },
   "devDependencies": {
-    "@babel/core": "^7.27.1",
     "@eslint/js": "^9.25.0",
     "@types/react": "^19.1.2",
     "@types/react-dom": "^19.1.2",
     "@vitejs/plugin-react": "^4.4.1",
     "autoprefixer": "^10.4.21",
-    "babel": "^6.23.0",
     "eslint": "^9.25.0",
     "eslint-plugin-react-hooks": "^5.2.0",
     "eslint-plugin-react-refresh": "^0.4.19",
     "globals": "^16.0.0",
     "postcss": "^8.5.3",
-    "vite": "^6.3.5",
-    "vite-plugin-babel": "^1.3.1"
+    "vite": "^6.3.5"
   }
 }
