--- a/backend/.env
+++ b/backend/.env
@@ -35,3 +35,7 @@ APP_SECRET=93d38d16397c9968a6d5a7cf7d61c58c
 # DATABASE_URL="postgresql://symfony:ChangeMe@127.0.0.1:5432/app?serverVersion=13&charset=utf8"
 DATABASE_URL="sqlite:///%kernel.cache_dir%/data.sqlite"
 ###< doctrine/doctrine-bundle ###
+
+###> nelmio/cors-bundle ###
+CORS_ALLOW_ORIGIN='^https?://(localhost|127\.0\.0\.1)(:[0-9]+)?$'
+###< nelmio/cors-bundle ###
