--- a/frontend/package.json
+++ b/frontend/package.json
@@ -20,6 +20,7 @@
     "react-dnd-touch-backend": "^16.0.1",
     "react-dom": "^19.1.0",
     "react-router": "^7.6.0",
+    "react-router-dom": "^7.6.1",
     "sass": "^1.89.0"
   },
   "devDependencies": {
