--- a/backend/config/packages/nelmio_cors.yaml
+++ b/backend/config/packages/nelmio_cors.yaml
@@ -1,7 +1,7 @@
 nelmio_cors:
     defaults:
         allow_credentials: true
-        allow_origin: ['http://localhost:3000']  # Ton front React
+        allow_origin: ['http://localhost:5173'] 
         allow_headers: ['Content-Type', 'Authorization']
         allow_methods: ['GET', 'POST', 'PUT', 'DELETE', 'OPTIONS']
         max_age: 3600
