--- a/backend/config/services.yaml
+++ b/backend/config/services.yaml
@@ -6,6 +6,7 @@
 parameters:
 
 services:
+    
     # default configuration for services in *this* file
     _defaults:
         autowire: true      # Automatically injects dependencies in your services.
@@ -15,10 +16,14 @@ services:
     # this creates a service per class whose id is the fully-qualified class name
     App\:
         resource: '../src/'
-        exclude:
+        exclude: 
             - '../src/DependencyInjection/'
             - '../src/Entity/'
             - '../src/Kernel.php'
+
+    App\EventListener\ApiExceptionListener:
+        tags:
+            - { name: kernel.event_listener, event: kernel.exception, method: onKernelException, priority: 255 }
 
     # add more service definitions when explicit configuration is needed
     # please note that last definitions always *replace* previous ones
